@@ -8,6 +8,7 @@
 - Added `console.linehascolor()` function that returns whether the specified line contains any of the specified colors.
 - Added `console.findprevline()` and `console.findnextline()` functions that can search backwards or forwards for text and/or colors in the screen buffer.  Regular expressions may be used.
 - Fixed doskey alias parsing for match generators and input line coloring (Clink had been using slightly different parsing rules than CMD does).
+- Fixed the "-- More --" prompt while listing key bindings; <kbd>Esc</kbd> didn't quit, and unexpected keys weren't ignored.
 
 ### v1.1.20
 
